# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16LqVRfigBlR0TaYWZgSnFPtQXyl0ZhsFs2EQXD5QV16I=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xT7k8SrHRFHSLJLziI8W8e85XcAFf372vX7dQIKJ2Sqc=',
      'err': 0,
    }),
  ])
# ---
